# jftools

./: .gitattributes  .gitignore  LICENSE  README.md  README.rst  flit.ini  meson.build  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml  python-package.yml  wheels.yml
dev/: bench_spmv.ipynb  check_dvr.ipynb  check_fedvr.ipynb  dvrmod.f90  test_sil.ipynb
jftools/: __init__.py  fedvr.py  interpolate.py  ipynbimport.py  myjit.py  plotting.py  shade_color.py  short_iterative_lanczos.py  short_iterative_lanczos_cython.pyx  short_iterative_lanczos_numba.py  tictoc.py  unroll_phase.py
tests/: test_all.py
