[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jftools"
authors = [{name = "Johannes Feist", email = "johannes.feist@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy >=1.15",
    "scipy >=1.0",
    "numba >=0.49",
    "nbformat >= 5.0",
    "IPython >= 7.0",
    "matplotlib >= 3.0",
]

[project.urls]
Home = "https://github.com/jfeist/jftools"

[tool.ruff]
line-length = 200
[tool.ruff.format]
skip-magic-trailing-comma = true
