[build-system]
requires = ["meson-python>=0.16", "meson>=1.4", "ninja", "Cython>=3.0", "numpy>=2.0", "scipy>=1.13", "qutip>=5.0"]
build-backend = "mesonpy"

[project]
name = "jftools"
authors = [{name = "Johannes Feist", email = "johannes.feist@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = "Collection of small useful helper tools for Python by Johannes Feist."
version = "0.4.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy >=2.0",
    "scipy >=1.13",
    "numba >=0.60",
    "nbformat >=5.10",
    "IPython >=8.18",
    "matplotlib >=3.8",
    "qutip>=5.0",
]

[project.urls]
Home = "https://github.com/jfeist/jftools"

[dependency-groups]
dev = [
    "meson-python>=0.16",
    "meson>=1.4",
    "ninja",
    "Cython>=3.0",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 200
[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*"]
build-verbosity = 1
test-requires = ["pytest>=8.3"]
test-command = "pytest {project}/tests -q"
