[build-system]
requires = ["flit_core>=3.10,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jftools"
authors = [{name = "Johannes Feist", email = "johannes.feist@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = "Collection of small useful helper tools for Python by Johannes Feist."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy >=2.0",
    "scipy >=1.13",
    "numba >=0.60",
    "nbformat >=5.10",
    "IPython >=8.18",
    "matplotlib >=3.8",
    "qutip>=5.0",
    "numba-lapack",
]

[project.urls]
Home = "https://github.com/jfeist/jftools"

[dependency-groups]
dev = [
    "flit>=3.10",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 200
[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.uv.sources]
numba-lapack = { git = "https://github.com/MTZ-dev/numba-lapack.git" }
